Estilos de navbar

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,3 +1,16 @@
 .acme-navbar-text{
   color: white;
 }
+
+.app-brand {
+  position: absolute;
+  top: 20%;
+  color: white !important;
+}
+
+.navbar {
+  background: #03A9F4;
+  border: none;
+  color: white;
+  height: 80px;
+}
