--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,19 +1,10 @@
 <nav class="navbar navbar-static-top navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/">
-                <span class="glyphicon glyphicon-home"></span> Angular Gulp Seed
-            </a>
+            <a class="app-brand navbar-brand" href="#/">Kong</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-            <ul class="nav navbar-nav">
-                <li class="active"><a ng-href="#/">Inicial</a></li>
-                <li><a href="#">Teste</a></li>
-                <li><a href="#">Teste 2</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right acme-navbar-text">
-                <!-- Login no futuro? -->
-            </ul>
+        <div class="text-center">
+          <h1>Mapa</h1>
         </div>
     </div>
 </nav>
