layout para navbar

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,11 +1,16 @@
 <div class="app-box container-fluid">
-    <div>
-        <acme-navbar />
+  <div>
+      <acme-navbar />
+  </div>
+  <div class="row">
+    <div class="col-xs-3">
+        <left-panel />
     </div>
-    <div class="jumbotron text-center">
+    <div class="col-xs-8">
         <h1>Angular Gulp Seed</h1>
         <p class="lead">
             <br> Quickstart project for Angular + Gulp
         </p>
     </div>
+  </div>
 </div>
