--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,10 +2,5 @@
     <div>
         <acme-navbar />
     </div>
-    <div class="jumbotron text-center">
-        <h1>Angular Gulp Seed</h1>
-        <p class="lead">
-            <br> Quickstart project for Angular + Gulp
-        </p>
-    </div>
+    <div id="mapa1"></div>
 </div>
