--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,3 +1,8 @@
-<div>
-  HOASDFLASDFLASKDF
+<div class="container-fluid">
+  <div class="row list-group">
+    <button type="button" class="list-group-item list-group-item-action" disabled>Mapa</button>
+    <button type="button" class="list-group-item list-group-item-action"></button>
+    <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
+    <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
+  </div>
 </div>
