mapa centrado en temuco y poligono

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,6 +1,8 @@
-<div class="app-box container-fluid">
-    <div>
+<div class="app-box">
+    <div class="nabvar-container">
         <acme-navbar />
     </div>
-    <div id="mapa1"></div>
+    <div class="map-container">
+      <div id="mapa1"></div>
+    </div>
 </div>
