leftpanel grid graficos

--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,8 +1,27 @@
 <div class="container-fluid">
-  <div class="row list-group">
-    <button type="button" class="list-group-item list-group-item-action" disabled>Mapa</button>
-    <button type="button" class="list-group-item list-group-item-action"></button>
-    <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-    <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
+  <div class="row" style="background: cyan">
+    <p>asdjasdlkjasdh</p>
+  </div>
+  <div class="row">
+    <div class="col-xs-6" style="background: black">
+      <p>asdjasdlkjasdh</p>
+    </div>
+    <div class="col-xs-6" style="background: yellow">
+      <p>asdjasdlkjasdh</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-3" style="background: white">
+      <p>asdjasdlkjasdh</p>
+    </div>
+    <div class="col-xs-3" style="background: blue">
+      <p>asdjasdlkjasdh</p>
+    </div>
+    <div class="col-xs-3" style="background: red">
+      <p>asdjasdlkjasdh</p>
+    </div>
+    <div class="col-xs-3" style="background: gray">
+      <p>asdjasdlkjasdh</p>
+    </div>
   </div>
 </div>
