--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,27 +1,33 @@
-<div class="container-fluid">
-  <div class="row" style="background: cyan">
-    <p>asdjasdlkjasdh</p>
+<div class="container-fixed bg-dark">
+  <div class="row">
+    <h1 style="font-size: 25px; color: white; background: #03A9F4; padding: 20px; text-align: center">
+      Graficos de mierda</h1>
   </div>
   <div class="row">
-    <div class="col-xs-6" style="background: black">
-      <p>asdjasdlkjasdh</p>
+    <img src="" alt="imagendekong.jpg">
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data" chart-labels="vm.labels"></canvas>
     </div>
-    <div class="col-xs-6" style="background: yellow">
-      <p>asdjasdlkjasdh</p>
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data1" chart-labels="vm.labels1"></canvas>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-3" style="background: white">
-      <p>asdjasdlkjasdh</p>
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data2" chart-labels="vm.labels2"></canvas>
     </div>
-    <div class="col-xs-3" style="background: blue">
-      <p>asdjasdlkjasdh</p>
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data3" chart-labels="vm.labels3"></canvas>
     </div>
-    <div class="col-xs-3" style="background: red">
-      <p>asdjasdlkjasdh</p>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data4" chart-labels="vm.labels4"></canvas>
     </div>
-    <div class="col-xs-3" style="background: gray">
-      <p>asdjasdlkjasdh</p>
+    <div class="col-xs-6">
+      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data5" chart-labels="vm.labels5"></canvas>
     </div>
   </div>
 </div>
