leftpanel graficos-ind kong

--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,32 +1,44 @@
-<div class="container-fixed bg-dark">
+<div class="container-fluid" style="background: #424242">
   <div class="row">
-    <h1 style="font-size: 25px; color: white; background: #03A9F4; padding: 20px; text-align: center">
-      Graficos de mierda</h1>
+    <h1 style="font-size: 25px; color: white; background: #03A9F4; 
+    padding: 20px; text-align: center; margin-top: 0px">
+      Graficos de indicadores</h1>
   </div>
   <div class="row">
-    <img src="" alt="imagendekong.jpg">
+    <div class="col-xs-4"></div>
+    <div class="col-xs-4">
+      <img style="color: white; width: 100px; height: 100px" src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png" alt="imagendekong.jpg">
+      <h5 style="color: white; text-align: center;">Indice KONG</h5>
+    </div>
+    <div class="col-xs-4"></div>
   </div>
   <div class="row">
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 1</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data" chart-labels="vm.labels"></canvas>
     </div>
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 2</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data1" chart-labels="vm.labels1"></canvas>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 3</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data2" chart-labels="vm.labels2"></canvas>
     </div>
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 4</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data3" chart-labels="vm.labels3"></canvas>
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="margin-bottom: 15px">
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 5</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data4" chart-labels="vm.labels4"></canvas>
     </div>
     <div class="col-xs-6">
+      <h5 style="color: white; text-align: center;">Grafico 6</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data5" chart-labels="vm.labels5"></canvas>
     </div>
   </div>
