--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,16 +1,13 @@
-<div class="container-fluid" style="background: #424242">
-  <div class="row">
-    <h1 style="font-size: 25px; color: white; background: #03A9F4; 
-    padding: 20px; text-align: center; margin-top: 0px">
-      Graficos de indicadores</h1>
+<div class="flex-item flex-column" style="background: #424242">
+  <div class="flex-row flex-item row">
+    <div class="flex-column flex-item col-xs-12">
+      <img style="color: white; width: 100px; height: 100px" src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png">
+    </div>
   </div>
   <div class="row">
-    <div class="col-xs-4"></div>
-    <div class="col-xs-4">
-      <img style="color: white; width: 100px; height: 100px" src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png" alt="imagendekong.jpg">
+    <div class="col-xs-12">
       <h5 style="color: white; text-align: center;">Indice KONG</h5>
     </div>
-    <div class="col-xs-4"></div>
   </div>
   <div class="row">
     <div class="col-xs-6">
