--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,7 +1,11 @@
 .app-box {
   padding: 0px;
+  width: 100%;
 }
 
 #mapa1 {
-  height: 550px;
+
+  margin-top: 10px;
+  width: 995px;
+  height: 580px;
 }
