--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,14 +1,9 @@
-<div class="app-box container-fluid">
-    <div>
-        <acme-navbar />
-    </div>
+<div class="app-box container">
     <div class="row">
-        <div class="col-xs-3">
-            <left-panel />
-        </div>
         <div class="col-xs-8">
           <div class="map-container">
             <div id="mapa1"></div>
+          </div>
         </div>
     </div>
 </div>
