--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -9,10 +9,10 @@
 }
 
 .navbar {
-  background: #03A9F4;
+  background: #00796B;
   border: none;
   color: white;
   height: 80px;
   margin-bottom: 0px;
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2);
+  border-bottom: solid 5px #FF5722;
 }
