--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,41 +1,41 @@
 <div class="leftpanel flex-item flex-column">
   <div class="row">
-    <div class="flex-column flex-item col-xs-12">
-      <img style="color: white; width: 100px; height: 100px" src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png">
+    <div class="flex-column flex-item col-xs-4">
+      <img id="kong" 
+      src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png">
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h2 style="color: white; text-align: center;">Indice KONG</h2>
+    <div class="col-xs-8">
+        <h3 id="kongtitle">Indice KONG</h3>
+        <h2 id="kongtitle">34545345%</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 1</h5>
+      <h5 id="graphtitle">Grafico 1</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data" chart-labels="vm.labels"></canvas>
     </div>
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 2</h5>
+      <h5 id="graphtitle">Grafico 2</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data1" chart-labels="vm.labels1"></canvas>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 3</h5>
+      <h5 id="graphtitle">Grafico 3</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data2" chart-labels="vm.labels2"></canvas>
     </div>
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 4</h5>
+      <h5 id="graphtitle">Grafico 4</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data3" chart-labels="vm.labels3"></canvas>
     </div>
   </div>
-  <div class="row" style="margin-bottom: 15px">
+  <div id="bpmdiv" class="row">
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 5</h5>
+      <h5 id="graphtitle">Grafico 5</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data4" chart-labels="vm.labels4"></canvas>
     </div>
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">Grafico 6</h5>
+      <h5 id="graphtitle">Grafico 6</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data5" chart-labels="vm.labels5"></canvas>
     </div>
   </div>
