--- a/src/app/components/leftpanel/leftpanel.scss
+++ b/src/app/components/leftpanel/leftpanel.scss
@@ -4,3 +4,25 @@
   -moz-box-shadow: 11px 0px 12px -4px rgba(135,133,135,0.87);
   box-shadow: 11px 0px 12px -4px rgba(135,133,135,0.87);
 }
+
+#graphtitle, #kongtitle {
+	color: white; 
+	text-align: center;
+}
+
+#kongtitle {
+	float: center;
+}
+
+#bpmdiv {
+	margin-bottom: 15px;
+}
+
+#kong {
+	color: white; 
+	width: 120px; 
+	height: 100px;
+	padding-top: 10px;
+	padding-bottom: 4px;
+	padding-left:30px;
+}
