--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -14,12 +14,12 @@
     <div class="col-xs-6">
       <h5 style="color: white; text-align: center;">ICAP MP 2,5</h5>
       <canvas id="mp25" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp25"></canvas>
-      <p class="text-center">{{vm.mp25[1] | number: 0}}/{{vm.maxICAP}}</p>
+      <p class="text-center label-chart">{{vm.mp25[1] | number: 0}}/{{vm.maxICAP}}</p>
     </div>
     <div class="col-xs-6">
       <h5 style="color: white; text-align: center;">ICAP MP 10</h5>
       <canvas id="mp10" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp10"></canvas>
-      <p class="text-center">{{vm.mp10[1] | number: 0}}/{{vm.maxICAP}}</p>
+      <p class="text-center label-chart">{{vm.mp10[1] | number: 0}}/{{vm.maxICAP}}</p>
     </div>
   </div>
   <!-- <div class="row">
