--- a/src/app/components/leftpanel/leftpanel.scss
+++ b/src/app/components/leftpanel/leftpanel.scss
@@ -6,7 +6,7 @@
 }
 
 #graphtitle, #kongtitle {
-	color: white; 
+	color: white;
 	text-align: center;
 }
 
@@ -19,10 +19,14 @@
 }
 
 #kong {
-	color: white; 
-	width: 120px; 
+	color: white;
+	width: 120px;
 	height: 100px;
 	padding-top: 10px;
 	padding-bottom: 4px;
 	padding-left:30px;
+}
+
+.label-chart {
+  color: #FFFFFF;
 }
