--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -1,5 +1,5 @@
 <div class="leftpanel flex-item flex-column">
-  <div class="row">
+  <!--<div class="row">
     <div class="flex-column flex-item col-xs-12">
       <img id="kong"
       src="https://files.slack.com/files-pri/TD73PCFEF-FF0KKT955/149b82653d5c0eb7aa0ab8581a209686.png">
@@ -9,30 +9,58 @@
     <div class="col-xs-12">
         <h3 id="kongtitle">Indice KONG</h3>
     </div>
+  </div>-->
+  <div class="row">
+    <h1 id="titulo">Graph</h1>
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">ICAP MP 2,5</h5>
+      <h5 id="graphtitle">ICAP MP 2,5</h5>
       <canvas id="mp25" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp25"></canvas>
-      <p class="text-center">{{vm.mp25[1] | number: 0}}/{{vm.maxICAP}}</p>
+      <p class="text-center"><b>{{vm.mp25[1] | number: 0}}/{{vm.maxICAP}}</b></p>
     </div>
     <div class="col-xs-6">
-      <h5 style="color: white; text-align: center;">ICAP MP 10</h5>
+      <h5 id="graphtitle">ICAP MP 10</h5>
       <canvas id="mp10" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp10"></canvas>
-      <p class="text-center">{{vm.mp10[1] | number: 0}}/{{vm.maxICAP}}</p>
+      <p class="text-center"><b>{{vm.mp10[1] | number: 0}}/{{vm.maxICAP}}</b></p>
     </div>
   </div>
-  <!-- <div class="row">
-    <div class="col-xs-6">
-      <h5 id="graphtitle">Grafico 3</h5>
-      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data2" chart-labels="vm.labels2"></canvas>
+  <div id="separadorpadre" class="row"">
+    <div id="separador" class="col-xs-11"></div>
+  </div>
+  <div class="row">
+    <div class="col-xs-7">
+      <h4 id="graphtitle">Humedad: </h4>
     </div>
-    <div class="col-xs-6">
-      <h5 id="graphtitle">Grafico 4</h5>
-      <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data3" chart-labels="vm.labels3"></canvas>
+    <div class="col-xs-5">
+      <h4 id="graphtitle"><b>50%<b></h4>
     </div>
   </div>
-  <div id="bpmdiv" class="row">
+  <div class="row">
+    <div class="col-xs-7">
+      <h4 id="graphtitle">Temperatura: </h4>
+    </div>
+    <div class="col-xs-5">
+      <h4 id="graphtitle"><b>20°C<b></h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-7">
+      <h4 id="graphtitle">Precipitaciones: </h4>
+    </div>
+    <div class="col-xs-5">
+      <h4 id="graphtitle"><b>3 ml<b></h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-7">
+      <h4 id="graphtitle">Vel. del viento: </h4>
+    </div>
+    <div class="col-xs-5">
+      <h4 id="graphtitle"><b>3 km/h<b></h4>
+    </div>
+  </div>
+  <!-- <div id="bpmdiv" class="row">
     <div class="col-xs-6">
       <h5 id="graphtitle">Grafico 5</h5>
       <canvas id="doughnut" class="chart chart-doughnut" chart-data="vm.data4" chart-labels="vm.labels4"></canvas>
