--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -8,3 +8,14 @@
   width: 995px;
   height: 580px;
 }
+
+.map-layers-list {
+  width: 200px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 5px 5px 12px -4px rgba(135,133,135,0.87);
+}
