--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -11,27 +11,31 @@
     </div>
   </div>-->
   <div class="row">
-    <h1 id="titulo">Graph</h1>
+    <div class="col-xs-12">
+      <h4 id="graphtitle"><b>Indicador KONG</b></h4>
+      <canvas class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.kong"></canvas>
+      <p class="text-center"><b>{{vm.kong[1] | number: 0}}/{{vm.maxICAP}}</b></p>
+    </div>
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <h5 id="graphtitle">ICAP MP 2,5</h5>
+      <h5 id="graphtitle"><b>ICAP MP 2,5</b></h5>
       <canvas id="mp25" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp25"
       chart-labels=vm.labelmp25></canvas>
       <p class="text-center"><b>{{vm.mp25[1] | number: 0}}/{{vm.maxICAP}}</b></p>
     </div>
     <div class="col-xs-6">
-      <h5 id="graphtitle">ICAP MP 10</h5>
+      <h5 id="graphtitle"><b>ICAP MP 10</b></h5>
       <canvas id="mp10" class="chart chart-doughnut" chart-colors="vm.colours" chart-data="vm.mp10"
       chart-labels="vm.labelmp10"></canvas>
       <p class="text-center"><b>{{vm.mp10[1] | number: 0}}/{{vm.maxICAP}}</b></p>
     </div>
   </div>
-  <div id="separadorpadre" class="row"">
+  <div id="separadorpadre" class="row">
     <div id="separador" class="col-xs-11"></div>
   </div>
   <div class="row">
-    <div class="col-xs-7">
+    <div class="col-xs-7 ">
       <h4 id="graphtitle">Humedad: </h4>
     </div>
     <div class="col-xs-5">
@@ -39,7 +43,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-7">
+    <div class="col-xs-7 ">
       <h4 id="graphtitle">Temperatura: </h4>
     </div>
     <div class="col-xs-5">
