--- a/src/app/components/leftpanel/leftpanel.scss
+++ b/src/app/components/leftpanel/leftpanel.scss
@@ -3,6 +3,7 @@
   -webkit-box-shadow: 11px 0px 12px -4px rgba(135,133,135,0.87);
   -moz-box-shadow: 11px 0px 12px -4px rgba(135,133,135,0.87);
   box-shadow: 11px 0px 12px -4px rgba(135,133,135,0.87);
+  padding-top: 30px;
 }
 
 #graphtitle, #kongtitle {
