añadidos branding logos

--- a/src/app/components/leftpanel/leftpanel.html
+++ b/src/app/components/leftpanel/leftpanel.html
@@ -66,6 +66,10 @@
       <h4 id="graphtitle"><b>3 km/h<b></h4>
     </div>
   </div>
+  <div class="logo-kong">
+    <img src="app/kong.png" />
+    <p style="line-height: 28px; font-size: 9px; color: white"> Kong 2018 </p>
+  </div>
   <!-- <div id="bpmdiv" class="row">
     <div class="col-xs-6">
       <h5 id="graphtitle">Grafico 5</h5>
