--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -12,6 +12,11 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 // bower:scss
 // endbower
 
+.app {
+    background: #90D1BB;
+    height: 100vh;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
