--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,10 +1,6 @@
-<nav class="navbar navbar-static-top navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="app-brand navbar-brand" href="#/">Kong</a>
-        </div>
-        <div class="text-center">
-          <h1>Mapa</h1>
-        </div>
-    </div>
-</nav>
+<div layout="row" class="navbar">
+    <md-button class="md-icon-button md-primary" aria-label="Settings">
+        <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+    </md-button>
+    <h1>Mapa</h1>
+</div>
