--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,18 +1,3 @@
-.acme-navbar-text{
-  color: white;
-}
-
-.app-brand {
-  position: absolute;
-  top: 20%;
-  color: white !important;
-}
-
 .navbar {
-  background: #00796B;
-  border: none;
-  color: white;
-  height: 80px;
-  margin-bottom: 0px;
-  border-bottom: solid 5px #FF5722;
+    background: #90D1BB;
 }
