--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,21 +1,17 @@
-.app-box {
-  padding: 0px;
-  width: 100%;
-}
-
-#mapa1 {
-  margin-top: 10px;
-  width: 995px;
-  height: 647px;
-}
-
-.map-layers-list {
-  width: 200px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 9999;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 5px 5px 12px -4px rgba(135,133,135,0.87);
+.main {
+    .hello-message {
+        color: white;
+        font-size: 50px;
+        // margin-bottom: 30px;
+    }
+    .md-button {
+        background-color: #C8E34F;
+        font-size: 30px;
+        color: #78873A;
+        border-radius: 8px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
