--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,6 +1,15 @@
-<div layout="row" class="navbar">
+<div layout="row" layout-align="start center" class="navbar">
     <md-button class="md-icon-button md-primary" aria-label="Settings">
-        <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+        <i class="glyphicon glyphicon-menu-hamburger"></i>
     </md-button>
-    <h1>Mapa</h1>
+    <div flex layout="row" layout-align="space-around center">
+        <div class="info-label" layout="row" flex layout-align="end center">
+            <img class="icon-img" src="app/exp@4x.png" />
+            <span>Nivel 1</span>
+        </div>
+        <div style="margin-left: 35px;" class="info-label" layout="row" flex layout-align="start center">
+            <img class="icon-img" src="app/moneda@4x.png" />
+            <span>4.142</span>
+        </div>
+    </div>
 </div>
