--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,3 +1,22 @@
 .navbar {
     background: #90D1BB;
+    padding: 10px;
+
+    .glyphicon {
+        font-size: 25px;
+        color: white;
+    }
+
+    .icon-img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .info-label {
+        span {
+            margin-left: 10px;
+            font-size: 25px;
+            color: white;
+        }
+    }
 }
