--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -15,6 +15,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 .app {
     background: #90D1BB;
     height: 100vh;
+    padding: 10px;
 }
 
 .browsehappy {
