--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-align="start center" class="navbar">
-    <md-button class="md-icon-button md-primary" aria-label="Settings">
+    <md-button ng-click="vm.toggleSidenav()" class="md-icon-button md-primary" aria-label="Settings">
         <i class="glyphicon glyphicon-menu-hamburger"></i>
     </md-button>
     <div flex layout="row" layout-align="space-around center">
