--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,5 @@
 <div flex layout="column" layout-align="space-around center" class="main">
     <span class="hello-message">Hola David</span>
     <img src="app/Domo sin nada@4x.png" />
-    <md-button class="md-raised">Reciclar!</md-button>
+    <md-button ui-sref="missions" class="md-raised">Reciclar!</md-button>
 </div>
