solucionar redimension en vista misiones

--- a/src/app/missions/missions.html
+++ b/src/app/missions/missions.html
@@ -2,7 +2,7 @@
     <div layout="row">
         <div class="grid ms-button2" flex style="background-color:gray;">1</div>
     </div>
-    <div style="text-align: center; margin-top: 40px;margin-bottom: 40px;" class="row">
+    <div style="text-align: center; margin-top: 40px;margin-bottom: 40px;">
         <span style="font-size: 30px;">Misiones para ti!</span>
     </div>
     <div layout="row">
