--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -7,7 +7,7 @@
 
     .glyphicon {
         font-size: 25px;
-        color: white;
+        color: #7F7F7F !important;
     }
 
     .icon-img {
@@ -19,12 +19,12 @@
         span {
             margin-left: 10px;
             font-size: 25px;
-            color: white;
+            color: #7F7F7F !important;
         }
     }
 
     .navbar-user {
-        color: white;
+        color: #7F7F7F !important;
         font-size: 30px;
     }
 }
