--- a/src/app/missions/missions.scss
+++ b/src/app/missions/missions.scss
@@ -1,4 +1,25 @@
 .missions {
+    .previous-mission {
+        padding: 15px;
+        background-color: #B9FA47;
+        border-radius: 15px;
+        img {
+            width: 40px;
+            height: 40px;
+            margin-right: 15px;
+        }
+    }
+
+    .mission-action-button {
+        height: 160px;
+        width: 160px;
+        margin: 20px;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 20px;
+        color: #75AD9F;
+    }
+
     .name {
         color: white;
         font-size: 30px;
@@ -7,21 +28,7 @@
         margin-bottom: 5px;
         //margin-top: 0px;
     }
-    .ms-button2 {
-        height: 60px;
-        margin: 10px;
-        border-radius: 8px;
-    }
-    .ms-button {
-        height: 100px;
-        width: 300px;
-        margin: 10px;
-        border-radius: 8px;
-    }
-    /*.ms-glyphicon {
-        font-size: 25px;
-        color: white;
-    }*/
+
     .ms-icon-img {
         width: 25px;
         height: 25px;
