--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -24,11 +24,11 @@
         <div flex layout="row">
             <div class="info-label" layout="row" flex layout-align="start center">
                 <img class="icon-img" src="app/exp@4x.png" />
-                <span ng-class="{'in-game-navbar': vm.view != 'home'}">Nivel 1</span>
+                <span ng-class="{'in-game-navbar': vm.view != 'home'}">Nivel {{global.level}}</span>
             </div>
             <div style="margin-left: 35px;" class="info-label" layout="row" flex layout-align="start center">
                 <img class="icon-img" src="app/moneda@4x.png" />
-                <span ng-class="{'in-game-navbar': vm.view != 'home'}">4.142</span>
+                <span ng-class="{'in-game-navbar': vm.view != 'home'}">{{global.rupias}}</span>
             </div>
         </div>
     </div>
