--- a/src/app/missionDetail/missionDetail.html
+++ b/src/app/missionDetail/missionDetail.html
@@ -1,20 +1,26 @@
 <div flex layout="column" layout-align="space-around center" class="mission-detail">
     <div ng-if="!vm.currentMission.tasks[2].done" flex class="task-item">
         <img ng-click="vm.showAlert($event, vm.currentMission.tasks[2])" style="position: absolute; top: 150px; right: 60px;" class="icon-img" src="app/nolisto.png" />
+        <span style="position: absolute; top: 157px; right: 110px; font-size: 20px;">Tarea 3</span>
     </div>
     <div ng-if="vm.currentMission.tasks[2].done" flex class="task-item">
         <img style="position: absolute; top: 150px; right: 60px;" class="icon-img" src="app/punto-listo.png" />
+        <span style="color: orange; position: absolute; top: 157px; right: 110px; font-size: 20px;">Tarea 3</span>
     </div>
     <div ng-if="!vm.currentMission.tasks[1].done" flex class="task-item">
         <img ng-click="vm.showAlert($event, vm.currentMission.tasks[1])"style="position: absolute; top: 330px; right: 175px;" class="icon-img" src="app/nolisto.png" />
+        <span style="position: absolute; top: 337px; right: 100px; font-size: 20px;">Tarea 2</span>
     </div>
     <div ng-if="vm.currentMission.tasks[1].done" flex class="task-item">
         <img style="position: absolute; top: 330px; right: 175px;" class="icon-img" src="app/punto-listo.png" />
+        <span style="color: orange; position: absolute; top: 337px; right: 100px; font-size: 20px;">Tarea 2</span>
     </div>
     <div ng-if="!vm.currentMission.tasks[0].done" flex class="task-item">
         <img ng-click="vm.showAlert($event, vm.currentMission.tasks[0])" style="position: absolute; top: 530px; right: 60px;" class="icon-img" src="app/nolisto.png" />
+        <span style="position: absolute; top: 535px; right: 110px; font-size: 20px;">Tarea 1</span>
     </div>
     <div ng-if="vm.currentMission.tasks[0].done" flex class="task-item">
         <img style="position: absolute; top: 530px; right: 60px;" class="icon-img" src="app/punto-listo.png" />
+        <span style="color: orange; position: absolute; top: 535px; right: 110px; font-size: 20px;">Tarea 1</span>
     </div>
 </div>
