--- a/src/app/missions/missions.html
+++ b/src/app/missions/missions.html
@@ -14,13 +14,13 @@
         <span style="margin-top: 15px; text-align: center; font-size: 25px; color: gray;">Misiones para ti!</span>
         <div flex style="margin-top: 15px;" layout="column" layout-align="start center">
             <div layout="row">
-                <div ng-click="vm.createNewMission('limpia')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
+                <div ng-click="vm.createNewMission('limpiar')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
                     <div layout="column" layout-align="center center">
                         <img src="app/limpia80.png" />
                         <div flex style="align-content: flex-end">Limpia</div>
                     </div>
                 </div>
-                <div ng-click="vm.createNewMission('recicla')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
+                <div ng-click="vm.createNewMission('reciclar')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
                     <div layout="column" layout-align="center center">
                         <img src="app/recicla80.png" />
                         <div flex>Recicla</div>
@@ -28,13 +28,13 @@
                 </div>
             </div>
             <div layout="row">
-                <div ng-click="vm.createNewMission('reutiliza')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
+                <div ng-click="vm.createNewMission('reutilizar')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
                     <div layout="column" layout-align="center center">
                         <img src="app/reutiliza80.png" />
                         <div flex>Reutiliza</div>
                     </div>
                 </div>
-                <div ng-click="vm.createNewMission('recolecta')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
+                <div ng-click="vm.createNewMission('recolectar')" flex layout="row" layout-align="center center" class="ms-button mission-action-button md-whiteframe-3dp">
                     <div layout="column" layout-align="center center">
                         <img src="app/recolecta80.png" />
                         <div flex>Recolecta</div>
